feat: add Mercado Pago service for payment processing and subscription management
- Implemented MercadoPagoService to handle payment preferences, webhook validation, and payment notifications.
- Created SubscriptionService to manage subscription lifecycle, including creation, cancellation, upgrades, downgrades, and trial management.
- Added email notifications for subscription events such as activation, cancellation, and renewal.
- Integrated payment processing with Mercado Pago API for subscription payments.

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,41 +1,89 @@
 # ===========================================
-# Lina X - Environment Configuration Template
+# Lina X - Environment Configuration Example
 # ===========================================
-# Copy this file to .env and fill in your values
-# NEVER commit .env to version control
+# Copy this file to .env and fill in the required values
 
-# ===========================================
+# ==========================================
 # DATABASE
-# ===========================================
+# ==========================================
+# PostgreSQL connection string
+# Format: postgresql://USER:PASSWORD@localhost:5432/DATABASE
+DATABASE_URL="postgresql://postgres:your_password@localhost:5432/linax"
 
-# SQLite (Local Development) - RECOMMENDED FOR DEV
-# Uses relative path from backend folder
-DATABASE_URL="file:./prisma/dev.db"
-
-# PostgreSQL (Production/Staging)
-# Uncomment and configure for production deployment
-# DATABASE_URL="postgresql://USER:PASSWORD@HOST:PORT/DATABASE?schema=public"
-#
-# Examples:
-# - Local Postgres:     postgresql://postgres:postgres@localhost:5432/linax?schema=public
-# - Supabase:           postgresql://postgres:[PASSWORD]@db.[PROJECT].supabase.co:5432/postgres
-# - Railway:            postgresql://postgres:[PASSWORD]@[HOST].railway.app:5432/railway
-# - Render:             postgresql://linax_user:[PASSWORD]@[HOST]/linax
-
-# ===========================================
+# ==========================================
 # SERVER
-# ===========================================
+# ==========================================
+# Server port
 PORT=3001
+
+# Node environment (development, production, staging)
 NODE_ENV=development
 
-# ===========================================
-# AUTHENTICATION
-# ===========================================
+# ==========================================
+# JWT AUTHENTICATION
+# ==========================================
+# JWT Secret for token signing (REQUIRED - app will not start without this)
+# Generate a secure random string: node -e "console.log(require('crypto').randomBytes(32).toString('hex'))"
+JWT_SECRET="sua_chave_secreta_super_segura_aqui_123"
 
-# JWT Secret - REQUIRED
-# Generate a secure random string for production:
-# node -e "console.log(require('crypto').randomBytes(64).toString('hex'))"
-JWT_SECRET="CHANGE_ME_TO_A_SECURE_RANDOM_STRING"
+# JWT expiration time (e.g., "24h", "7d", "30d")
+JWT_EXPIRY="24h"
 
-# BCrypt Salt Rounds (10-12 recommended)
+# ==========================================
+# SECURITY
+# ==========================================
+# BCrypt salt rounds (higher = more secure but slower)
 BCRYPT_SALT_ROUNDS=12
+
+# ==========================================
+# EMAIL SERVICE (SendGrid)
+# ==========================================
+# SendGrid API Key for sending transactional emails
+# Get your key at: https://app.sendgrid.com/settings/api_keys
+SENDGRID_API_KEY="SG.your_sendgrid_api_key_here"
+
+# Email sender address (must be verified in SendGrid)
+# Recommended: noreply@yourdomain.com or system@yourdomain.com
+EMAIL_FROM="noreply@linax.com"
+
+# ==========================================
+# FRONTEND URL
+# ==========================================
+# Frontend URL for email links and redirects
+# Used in email templates for subscription links
+FRONTEND_URL="http://localhost:3000"
+
+# Production frontend URL (for staging/production)
+# FRONTEND_URL_PROD="https://app.linax.com"
+
+# ==========================================
+# PAYMENT GATEWAY (Future Implementation)
+# ==========================================
+# Stripe API Keys
+# STRIPE_SECRET_KEY="sk_test_..."
+# STRIPE_PUBLISHABLE_KEY="pk_test_..."
+# STRIPE_WEBHOOK_SECRET="whsec_..."
+
+# Mercado Pago API Keys
+MERCADO_PAGO_ACCESS_TOKEN="APP_USR-your_access_token"
+MERCADO_PAGO_PUBLIC_KEY="APP_USR-your_public_key"
+MERCADO_PAGO_WEBHOOK_SECRET="your_webhook_secret"
+
+# Payment Return URLs (for redirect after checkout)
+PAYMENT_SUCCESS_URL="http://localhost:3001/pagamento-retorno.html"
+PAYMENT_FAILURE_URL="http://localhost:3001/pagamento-retorno.html"
+PAYMENT_PENDING_URL="http://localhost:3001/pagamento-retorno.html"
+
+# ==========================================
+# LOGGING
+# ==========================================
+# Log level (error, warn, info, debug)
+LOG_LEVEL="info"
+
+# ==========================================
+# FEATURES
+# ==========================================
+# Enable/disable features
+ENABLE_SUBSCRIPTIONS=true
+ENABLE_EMAIL_NOTIFICATIONS=true
+ENABLE_PAYMENT_GATEWAY=false  # Set to true when payment integration is ready
