--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
   "packageManager": "pnpm@10.15.1",
   "dependencies": {
     "@prisma/client": "^6.16.1",
+    "@sendgrid/mail": "^8.1.6",
     "@types/node-cron": "^3.0.11",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
@@ -32,6 +33,7 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "node-cron": "^4.2.1",
+    "nodemailer": "^7.0.13",
     "prisma": "^6.16.1"
   },
   "devDependencies": {
