chore: add vercel deployment configuration

--- a/backend/package.json
+++ b/backend/package.json
@@ -21,7 +21,11 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "packageManager": "pnpm@10.15.1",
+  "engines": {
+    "node": "18.x",
+    "npm": "10.x"
+  },
+  "packageManager": "npm@10.x",
   "dependencies": {
     "@prisma/client": "^6.16.1",
     "@sendgrid/mail": "^8.1.6",
