chore: update package manager to pnpm in configuration files

--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
-  "buildCommand": "cd backend && npm run build",
+  "buildCommand": "cd backend && pnpm run build",
   "outputDirectory": "backend/dist",
-  "devCommand": "cd backend && npm run dev",
+  "devCommand": "cd backend && pnpm run dev",
   "rewrites": [
     {
       "source": "/api/(.*)",
