--- a/backend/package.json
+++ b/backend/package.json
@@ -22,9 +22,9 @@
   "author": "",
   "license": "ISC",
   "engines": {
-    "node": "18.x",
-    "npm": "10.x"
+    "node": "18.x"
   },
+  "packageManager": "pnpm@10.15.1",
   "dependencies": {
     "@prisma/client": "^6.16.1",
     "@sendgrid/mail": "^8.1.6",
