fix: configure vercel.json v2 with proper backend paths

--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,12 @@
 {
-  "buildCommand": "cd backend && pnpm run build",
+  "version": 2,
+  "buildCommand": "pnpm run build",
   "outputDirectory": "backend/dist",
+  "installCommand": "cd backend && pnpm install --frozen-lockfile",
   "devCommand": "cd backend && pnpm run dev",
-  "rewrites": [
-    {
-      "source": "/api/(.*)",
-      "destination": "/index.js"
-    },
-    {
-      "source": "/(.*)",
-      "destination": "/DESKTOPV2/index.html"
-    }
-  ]
+  "env": {
+    "PNPM_HOME": "/pnpm",
+    "PATH": "$PNPM_HOME:$PATH"
+  },
+  "regions": ["sfo1"]
 }
