--- a/package.json
+++ b/package.json
@@ -7,9 +7,15 @@
   },
   "packageManager": "pnpm@10.15.1",
   "scripts": {
+    "install": "cd backend && pnpm install",
     "dev": "cd backend && pnpm dev",
-    "build": "cd backend && pnpm build",
+    "build": "cd backend && pnpm install && pnpm build",
     "start": "cd backend && pnpm start"
+  },
+  "vercel": {
+    "buildCommand": "pnpm build",
+    "outputDirectory": "backend/dist",
+    "installCommand": "cd backend && pnpm install --frozen-lockfile"
   },
   "dependencies": {},
   "devDependencies": {}
