chore: simplify package.json and vercel.json scripts by removing frozen-lockfile option

--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-  "buildCommand": "cd backend && pnpm install --frozen-lockfile && pnpm build",
+  "buildCommand": "cd backend && pnpm install && pnpm build",
   "outputDirectory": "backend/dist",
-  "installCommand": "cd backend && pnpm install --frozen-lockfile"
+  "installCommand": "cd backend && pnpm install"
 }
