--- a/railway.toml
+++ b/railway.toml
@@ -1,7 +1,7 @@
 [build]
-builder = "dockerfile"
+builder = "nixpacks"
 
 [deploy]
-startCommand = "cd backend && npm run start"
+startCommand = "cd backend && pnpm run start"
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 10
