fix: replace pnpm with npm in scripts and configuration files

--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-  "buildCommand": "cd backend && pnpm install && pnpm build",
+  "buildCommand": "cd backend && npm run build",
   "outputDirectory": "backend/dist",
-  "installCommand": "cd backend && pnpm install"
+  "installCommand": "cd backend && npm install"
 }
