--- a/package.json
+++ b/package.json
@@ -5,11 +5,10 @@
   "engines": {
     "node": "22.x"
   },
-  "packageManager": "pnpm@10.15.1",
   "scripts": {
-    "dev": "cd backend && pnpm dev",
-    "build": "cd backend && pnpm install && pnpm build",
-    "start": "cd backend && pnpm start"
+    "dev": "cd backend && npm install && npm run dev",
+    "build": "cd backend && npm install && npm run build",
+    "start": "cd backend && npm start"
   },
   "dependencies": {},
   "devDependencies": {}
