--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon",
-    "build": "npx rimraf dist && tsc",
+    "build": "rm -rf dist && tsc",
     "start": "node dist/index.js",
     "db:generate": "prisma generate",
     "db:push": "prisma db push",
@@ -21,9 +21,6 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "engines": {
-    "node": "24.x"
-  },
   "dependencies": {
     "@prisma/client": "^6.16.1",
     "@sendgrid/mail": "^8.1.6",
