--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,4 @@
 {
-  "buildCommand": "cd backend && npm ci && npm run build",
+  "buildCommand": "cd backend && pnpm install && pnpm build",
   "outputDirectory": "backend/dist"
 }
