fix: update npm registry to official source and ensure package manager is set to pnpm

--- a/backend/.npmrc
+++ b/backend/.npmrc
@@ -1,1 +1,2 @@
-registry=https://registry.npmmirror.com
+# Use the official npm registry to avoid mirror-related fetch errors on Vercel
+registry=https://registry.npmjs.org
