--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "linaforge",
   "version": "1.0.0",
+  "packageManager": "pnpm@9.12.0",
   "private": true,
   "scripts": {
     "dev": "cd backend && npm install && npm run dev",
