chore: add engines field to package.json and update vercel.json install command

--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,5 @@
 {
-  "buildCommand": "cd backend && pnpm install && pnpm build",
+  "installCommand": "cd backend && corepack enable && corepack prepare pnpm@9.12.0 --activate && pnpm install --frozen-lockfile",
+  "buildCommand": "cd backend && pnpm build",
   "outputDirectory": "backend/dist"
 }
