--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,9 @@
   "description": "",
   "main": "index.js",
   "packageManager": "pnpm@9.12.0",
+  "engines": {
+    "node": "20.x"
+  },
   "scripts": {
     "dev": "nodemon",
     "build": "rm -rf dist && tsc",
