--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "packageManager": "pnpm@9.12.0",
   "private": true,
+  "engines": {
+    "node": "20.x"
+  },
   "scripts": {
     "dev": "cd backend && npm install && npm run dev",
     "build": "cd backend && npm install && npm run build",
