--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-  "installCommand": "cd backend && npm install --no-package-lock --no-fund --no-audit",
+  "installCommand": "cd backend && npm install --no-package-lock --no-fund --no-audit --include=dev",
   "buildCommand": "cd backend && npm run build",
   "outputDirectory": "backend/dist"
 }
