--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "node": "20.x"
   },
   "scripts": {
-    "dev": "cd backend && npm install && npm run dev",
-    "build": "cd backend && npm install && npm run build",
+    "dev": "cd backend && npm install --no-package-lock --include=dev && npm run dev",
+    "build": "cd backend && npm install --no-package-lock --include=dev && npm run build",
     "start": "cd backend && npm start"
   },
   "dependencies": {},
