refactor: remove static file serving and root route from index.ts; update vercel configuration for static front

--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,11 @@
 {
-  "installCommand": "cd backend && npm install --no-package-lock --no-fund --no-audit --include=dev",
-  "buildCommand": "cd backend && npm run build",
-  "outputDirectory": "backend/dist"
+  "installCommand": "echo \"skip install (static front only)\"",
+  "buildCommand": "echo \"no build step\"",
+  "outputDirectory": "DESKTOPV2",
+  "rewrites": [
+    {
+      "source": "/api/(.*)",
+      "destination": "https://linacraft.up.railway.app/api/$1"
+    }
+  ]
 }
